--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Trilha de CSS - DIO</title>
+  <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 <body>
   <header class="banner">
@@ -17,6 +18,8 @@
       <button>Quero me inscrever</button>
     </div>
   </header>
+  </body>
+  <!--
   <main>
     <section id="course-content">
       <h2>O que vou aprender?</h2>
@@ -55,4 +58,5 @@
     <p>Acesse <a href="https://dio.me">dio.me</a> e se cadastre agora</p>
   </footer>
 </body>
+-->
 </html>
