feat: adiciona a section course-content

--- a/index.html
+++ b/index.html
@@ -18,8 +18,7 @@
       <button>Quero me inscrever</button>
     </div>
   </header>
-  </body>
-  <!--
+  
   <main>
     <section id="course-content">
       <h2>O que vou aprender?</h2>
@@ -39,6 +38,10 @@
         </div>
       </div>
     </section>
+
+  </main>
+</body>
+    <!--
     <section id="transform-world">
       <p>TRANSFORME O MUNDO COM A GENTE</p>
     </section>
